<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PagamentoActivity">

    <TextView
        android:id="@+id/activity_pagamento_instrucao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/instrucao"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/activity_pagamento_titulo_valor_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/valor_da_compra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_instrucao" />

    <TextView
        android:id="@+id/activity_pagamento_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/activity_pagamento_titulo_valor_compra"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_titulo_valor_compra"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/activity_pagamento_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/numero_do_cartao"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/activity_pagamento_preco"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_preco" />

    <EditText
        android:id="@+id/activity_pagamento_mes"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/mes"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/activity_pagamento_numero_cartao"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_numero_cartao" />

    <EditText
        android:id="@+id/activity_pagamento_ano"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ano"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/activity_pagamento_mes"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_numero_cartao" />

    <EditText
        android:id="@+id/activity_pagamento_cvc"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/cvc"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:inputType="number"
        android:maxLength="3"

        app:layout_constraintBottom_toBottomOf="@+id/activity_pagamento_ano"
        app:layout_constraintEnd_toEndOf="@+id/activity_pagamento_numero_cartao"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_numero_cartao" />

    <EditText
        android:id="@+id/activity_pagamento_nome_titular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/titular"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/activity_pagamento_cvc"
        app:layout_constraintStart_toStartOf="@+id/activity_pagamento_mes"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_ano" />

    <Button
        android:id="@+id/activity_pagamento_botao_realiza_pagamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/botao_redondo_laranja"
        android:text="@string/realizar_pagamento"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/activity_pagamento_nome_titular"
        app:layout_constraintStart_toStartOf="@+id/activity_pagamento_nome_titular"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_nome_titular"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>